# qual-qualis

./: CHANGELOG  CHANGELOG.md  README.md  pyproject.toml
qual_qualis/: __init__.py
qual_qualis/cli/: __init__.py
qual_qualis/cli/file_handler/: bib_handler.py  csv_handler.py  file_handler.py
qual_qualis/data/: conferences.csv  journals.csv  model.py  service.py  source.py
qual_qualis/index/: create.sql  index.py  model.py  search.py
