[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qual-qualis"
version = "0.2.2"
authors = [
  { name="Henrique Santana", email="henriquessantana314@gmail.com" },
]
description = "Busca automatizada de classificação Qualis de conferências e periódicos"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]
dependencies = [
  "bibtexparser ~= 2.0.0b",
  "google-api-python-client",
  "levenshtein",
  "pandas",
  "pybktree",
  "pydantic",
  "requests",
]

[project.urls]
Repository = "https://github.com/piface314/qual-qualis"
Issues = "https://github.com/piface314/qual-qualis/issues"

[project.scripts]
qual-qualis = "qual_qualis.cli:main"

[tool.setuptools.package-data]
"qual_qualis.data" = ["*.csv"]
"qual_qualis.index" = ["*.sql"]
